# gesund

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.txt  README.md  pyproject.toml  requirements.txt  setup.py  test_validation.py
.github/: release.yaml
.github/workflows/: deploy-docs.yml  publish-testpypi  publish-testpypi.yml  python-publish.yml  release.yml  test.yml
docs/: gesund.core.rst  gesund.platform.datasets.rst  gesund.platform.rst  gesund.platform.validation.rst  gesund.rst  gesund.validation.rst  modules.rst
docs/source/: conf.py
examples/: classification_covidnet.ipynb  object_detection_malaria.ipynb  semantic_segmentation_brain_cancer.ipynb  utils.py
gesund/: __init__.py  dummy.py  run_meta_validation.py  run_validation.py  validation.py
gesund/core/: __init__.py  _common.py  _data_loaders.py  _exceptions.py  _plot.py  _schema.py  _utils.py  _validation.py  run_metrics.py  schema.py
gesund/core/_converters/: __init__.py  coco_converter.py  converter_factory.py  yolo_converter.py
gesund/core/_managers/: base.py  metric_manager.py  plot_manager.py
gesund/core/tests/: test_classification_plots.py
gesund/examples/: README.md  classification_covidnet.ipynb  object_detection_malaria.ipynb  semantic_segmentation_brain_cancer.ipynb
gesund/metrics/: __init__.py  manager.py
gesund/notebooks/: Classification.ipynb  ObjectDetection.ipynb  Segmentation.ipynb
gesund/plots/: manager.py
gesund/validation/: __init__.py  _result.py  _validation.py  validation.py
tests/: common.py  conftest.py  tmp.py
tests/core/: _converters.py  _plot.py  _test_classification_plots.py  _test_data_loaders.py  _test_integration.py  test_classification_plots.py  test_common_metrics.py  test_converters.py  test_integration.py  test_manager.py  test_plot.py
tests/metrics/: test_manager.py  test_metrics_manager.py
tests/plots/: test_manager.py
tests/validation/: test_validation.py
(+124 files in other folders)
