[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gesund"
version = "2024.11.1"
authors = [
  { name = "Veysel Koccaman", email = "veysel@gesund.ai" },
  { name = "Hammad Khalid", email = "hammad@gesund.ai" },
  { name = "Akson Varghese", email = "akson@gesund.ai" },
  { name = "Ozkan Uysal", email = "ozkan@gesund.ai" },
]
maintainers = [
  { name = "Hammad Khalid", email = "hammad@gesund.ai" },
  { name = "Akson Varghese", email = "akson@gesund.ai" },
  { name = "Ozkan Uysal", email = "ozkan@gesund.ai" },
]
description = "A CRO platform for clinical-grade AI Train. Validate. Secure clearance. Gesund.ai orchestrates the AI as-a-Medical Device lifecycle, providing privacy-centered access to diverse yet standardized medical data sources, and a unique analytical toolbox that fosters clinical validation, regulatory clearance and effective marketing"
readme = "README.md"
license = { file = "LICENSE.txt" }
keywords = ["gesund", "medical", "radiology", "machine learning", "ai", "artificial intelligence"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "bson",
    "jsonschema",
    "scikit-learn",
    "pandas",
    "seaborn",
    "opencv-python",
    "dictances==1.5.3",
    "miseval==1.2.2",
    "numpy==1.21.6",
    "numba==0.55.2",
    "tqdm",
    "pycocotools @ git+https://github.com/HammadK44/cocoapi.git@Dev#subdirectory=PythonAPI"
]

[project.urls]
Homepage = "https://github.com/gesund-ai/gesund"
Issues = "https://github.com/gesund-ai/gesund/issues"
Documentation = "https://gesund-ai.github.io/"

[project.optional-dependencies]
test = [ "pytest", "pytest-cov"]

[tool.setuptools]
package-data = {"*" = ["*"]}